# link-shortener

./: Cargo.toml  LICENSE  pyproject.toml  test.py
src/: lib.rs  main.rs
src/adapters/: axum.rs  generator.rs  in_memory.rs  mod.rs
src/application/: link_shortener.rs
src/core/models/: id.rs  mod.rs  url.rs
src/core/ports/: gen_id.rs  mod.rs  repository.rs  service.rs
